Slides visibility fix.

--- a/Netflix - widok glownego dashboardu (react)/Starter-code/src/global-components/SlideTile/SlideTile.scss
+++ b/Netflix - widok glownego dashboardu (react)/Starter-code/src/global-components/SlideTile/SlideTile.scss
@@ -2,13 +2,7 @@
 
 .container {
     position: relative;
-    height: 140px;
-    width: 218px;
     cursor: pointer;
-    @include tabletBreakpoint {
-        height: 164px;
-        width:264px;
-    }
     .slide-tile-container {
         @include flex(row, space-between, flex-start);
         gap: 16px;
